fix: adjust battle comment form width to 100% to prevent overflow (#1203)

--- a/frontend/static/css/layout.css
+++ b/frontend/static/css/layout.css
@@ -326,7 +326,7 @@
         }
 
             .comment-form-body-battle-side #id_battle_side {
-                width: auto;
+                width: 100%;
                 max-width: 60%;
             }
 
